ToDoApp/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
