ToDoApp/backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
spec:
  rules:
    - host: todo-backend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 80
